@@ -1,12 +1,13 @@
 package no.nav.foreldrepenger.domene.rest.historikk.tilfeller;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
 import jakarta.enterprise.context.ApplicationScoped;
 
-import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkEndretFeltType;
+import no.nav.foreldrepenger.behandlingslager.behandling.historikk.HistorikkinnslagLinjeBuilder;
 import no.nav.foreldrepenger.behandlingslager.behandling.opptjening.OpptjeningAktivitetType;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagEntitet;
 import no.nav.foreldrepenger.domene.entiteter.BeregningsgrunnlagGrunnlagEntitet;
@@ -15,24 +16,34 @@ import no.nav.foreldrepenger.domene.iay.modell.InntektArbeidYtelseGrunnlag;
 import no.nav.foreldrepenger.domene.modell.kodeverk.FaktaOmBeregningTilfelle;
 import no.nav.foreldrepenger.domene.rest.FaktaOmBeregningTilfelleRef;
 import no.nav.foreldrepenger.domene.rest.dto.FaktaBeregningLagreDto;
-import no.nav.foreldrepenger.domene.rest.dto.VurderEtterlønnSluttpakkeDto;
-import no.nav.foreldrepenger.historikk.HistorikkInnslagTekstBuilder;
 
 @ApplicationScoped
 @FaktaOmBeregningTilfelleRef(FaktaOmBeregningTilfelle.VURDER_ETTERLØNN_SLUTTPAKKE)
 public class VurderEtterlønnSluttpakkeHistorikkTjeneste extends FaktaOmBeregningHistorikkTjeneste {
 
     @Override
-    public void lagHistorikk(Long behandlingId, FaktaBeregningLagreDto dto, HistorikkInnslagTekstBuilder tekstBuilder, BeregningsgrunnlagEntitet nyttBeregningsgrunnlag, Optional<BeregningsgrunnlagGrunnlagEntitet> forrigeGrunnlag, InntektArbeidYtelseGrunnlag iayGrunnlag) {
+    public List<HistorikkinnslagLinjeBuilder> lagHistorikk(FaktaBeregningLagreDto dto,
+                                                           BeregningsgrunnlagEntitet nyttBeregningsgrunnlag,
+                                                           Optional<BeregningsgrunnlagGrunnlagEntitet> forrigeGrunnlag,
+                                                           InntektArbeidYtelseGrunnlag iayGrunnlag) {
+
+        List<HistorikkinnslagLinjeBuilder> linjeBuilder = new ArrayList<>();
         if (dto.getFaktaOmBeregningTilfeller().contains(FaktaOmBeregningTilfelle.VURDER_ETTERLØNN_SLUTTPAKKE)) {
-            lagHistorikkForVurdering(dto, tekstBuilder, forrigeGrunnlag.flatMap(BeregningsgrunnlagGrunnlagEntitet::getBeregningsgrunnlag));
+            linjeBuilder.add(
+                lagHistorikkinnslagVurderEtterlønnSluttpakke(dto, forrigeGrunnlag.flatMap(BeregningsgrunnlagGrunnlagEntitet::getBeregningsgrunnlag)));
         }
+        return linjeBuilder;
     }
 
-    private void lagHistorikkForVurdering(FaktaBeregningLagreDto dto, HistorikkInnslagTekstBuilder tekstBuilder, Optional<BeregningsgrunnlagEntitet> forrigeBg) {
+    private HistorikkinnslagLinjeBuilder lagHistorikkinnslagVurderEtterlønnSluttpakke(FaktaBeregningLagreDto dto,
+                                                                                      Optional<BeregningsgrunnlagEntitet> forrigeBg) {
         var vurderDto = dto.getVurderEtterlønnSluttpakke();
-        var opprinneligVerdiEtterlønnSLuttpakke = forrigeBg.flatMap(this::hentOpprinneligVerdiErEtterlønnSluttpakke);
-        lagHistorikkinnslagVurderEtterlønnSluttpakke(vurderDto, opprinneligVerdiEtterlønnSLuttpakke.orElse(null), tekstBuilder);
+        var opprinneligVerdiEtterlønnSLuttpakke = forrigeBg.flatMap(this::hentOpprinneligVerdiErEtterlønnSluttpakke).orElse(null);
+        if (!vurderDto.erEtterlønnSluttpakke().equals(opprinneligVerdiEtterlønnSLuttpakke)) {
+            return new HistorikkinnslagLinjeBuilder().fraTil("Inntekt fra etterlønn eller sluttpakke", opprinneligVerdiEtterlønnSLuttpakke,
+                vurderDto.erEtterlønnSluttpakke());
+        }
+        return null;
     }
 
     private Optional<Boolean> hentOpprinneligVerdiErEtterlønnSluttpakke(BeregningsgrunnlagEntitet beregningsgrunnlag) {
@@ -45,16 +56,9 @@ public class VurderEtterlønnSluttpakkeHistorikkTjeneste extends FaktaOmBeregnin
         return Optional.empty();
     }
 
-    private void lagHistorikkinnslagVurderEtterlønnSluttpakke(VurderEtterlønnSluttpakkeDto dto, Boolean opprinneligVerdiErEtterlønnSluttpakke, HistorikkInnslagTekstBuilder tekstBuilder) {
-        if (!dto.erEtterlønnSluttpakke().equals(opprinneligVerdiErEtterlønnSluttpakke)) {
-            tekstBuilder
-                .medEndretFelt(HistorikkEndretFeltType.VURDER_ETTERLØNN_SLUTTPAKKE, opprinneligVerdiErEtterlønnSluttpakke, dto.erEtterlønnSluttpakke());
-        }
-    }
-
     private List<BeregningsgrunnlagPrStatusOgAndel> finnEtterlønnSluttpakkeAndel(BeregningsgrunnlagEntitet nyttBeregningsgrunnlag) {
         return nyttBeregningsgrunnlag.getBeregningsgrunnlagPerioder()
-            .get(0)
+            .getFirst()
             .getBeregningsgrunnlagPrStatusOgAndelList()
             .stream()
             .filter(bpsa -> bpsa.getArbeidsforholdType().equals(OpptjeningAktivitetType.ETTERLØNN_SLUTTPAKKE))
